--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <p>
             I strive to design intuitive and accessible products that make day-to-day living easier. I'm currently looking for full-time employment in UX design or research. Below are some of the projects that I've been working on.
         </p>
-        
+        <a href="creditkarma.html">Credit Karma Redesign</a>
     </body>
 </html>
