--- a/creditkarma.html
+++ b/creditkarma.html
@@ -10,7 +10,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="resume.pdf">Resume</a></li>
+                <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
         <div align="center"><h1>Credit Karma Redesign</h1></div>
