--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
             <ul>
                 <div classname="current-page"><li>Home</li></div>
                 <li><a href="about.html">About</a></li>
-                <li><a href="resume.pdf">Resume</a></li>
+                <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
         <h1>Elizabeth Dinh</h1>
         <p>
             I strive to design intuitive and accessible products that make day-to-day living easier. I'm currently looking for full-time employment in UX design or research. Below are some of the projects that I've been working on.
         </p>
+        <a href="ugr.html">UCSC Undergraduate Research Opportunities</a>
+        <a href="t4g.html">Tech4Good</a>
         <a href="creditkarma.html">Credit Karma Redesign</a>
+        <a href="worldbuilder.html">WorldBuilder</a>
     </body>
 </html>
