--- a/creditkarma.html
+++ b/creditkarma.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
         <meta charset="utf-8">
         <title>Credit Karma Redesign</title>
     </head>
@@ -13,6 +14,7 @@
                 <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
+        <br/>
         <div align="center"><h1>Credit Karma Redesign</h1></div>
         <h2 align="center">Introduction</h2>
         <p>
@@ -94,20 +96,21 @@
             The credit score simulator feature needs to be improved in terms of visibility, especially when many people have a desire to use this feature. It is hidden in an illogical menu structure; the user needs to hover over Resources and search through a large number of features to find the simulator. A better way to advertise this simulator is to either create a large icon for it in the dashboard or place it on the same page as the user’s full credit report.
         </p>
         <h2 align="center">Wireframes</h2>
-        <img src="Wireframes/CreditKarma/Page1.jpg" width="500" class="center"/><img src="Wireframes/CreditKarma/Page2.jpg" width="500" class="center"/>
+        <div class="center"><img src="Wireframes/CreditKarma/Page1.jpg" width="500"/><img src="Wireframes/CreditKarma/Page2.jpg" width="500"/></div>
         <h2 align="center">High Fidelity Mockup</h2>
-        <img src="Prototypes/CreditKarma/Dashboard.png" width="500" class="center"/>
+        <div class="center"><img src="Prototypes/CreditKarma/Dashboard.png" width="1000"/></div>
         <br/>
         <div style="text-align:center;"><i>Dashboard</i></div>
-        <img src="Prototypes/CreditKarma/Tutorial.png" width="500" class="center"/>
+        <br/>
+        <div class="center"><img src="Prototypes/CreditKarma/Tutorial.png" width="1000"/></div>
         <br/>
         <div style="text-align:center;"><i>Dashboard - Tutorial</i></div>
         <br/>
-        <img src="Prototypes/CreditKarma/Calculators.png" width="500" class="center"/>
+        <div class="center"><img src="Prototypes/CreditKarma/Calculators.png" width="1000"/></div>
         <br/>
         <div style="text-align:center;"><i>Calculators</i></div>
         <br/>
-        <div style="text-align:center;"><img src="Prototypes/CreditKarma/Calculators.png" width="500" class="center"/></div>
+        <div class="center"><img src="Prototypes/CreditKarma/IdentityVerification.png" width="1000"/></div>
         <br/>
         <div style="text-align:center;"><i>Registration - Identity Verification</i></div>
         <br/>
