--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
         <meta charset="utf-8">
         <title>Elizabeth Dinh</title>
     </head>
@@ -13,10 +14,11 @@
                 <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
-        <h1>Elizabeth Dinh</h1>
-        <p>
-            I strive to design intuitive and accessible products that make day-to-day living easier. I'm currently looking for full-time employment in UX design or research. Below are some of the projects that I've been working on.
-        </p>
+        <br/><br/>
+        <div style="text-indent: 4em; line-height: 0.5em"><h1>Elizabeth Dinh</h1></div>
+        <div style="text-indent: 4em;">
+        I strive to design intuitive and accessible products that make day-to-day living easier. I'm currently looking for full-time employment in UX design or research. Below are some of the projects that I've been working on.
+        </div>
         <a href="ugr.html">UCSC Undergraduate Research Opportunities</a>
         <br/>
         <a href="t4g.html">Tech4Good</a>
