--- a/t4g.html
+++ b/t4g.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
         <meta charset="utf-8">
         <title>Tech4Good</title>
     </head>
@@ -13,7 +14,8 @@
                 <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
-        <h1>Tech4Good</h1>
+        <br/>
+        <div align="center"><h1>Tech4Good</h1></div>
         <p>
             Coming soon!
         </p>
