--- a/worldbuilder.html
+++ b/worldbuilder.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
         <meta charset="utf-8">
         <title>WorldBuilder</title>
     </head>
@@ -13,6 +14,7 @@
                 <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
+        <br/>
         <div align="center"><h1>WorldBuilder</h1></div>
         <h2 align="center">Introduction</h2>
         <p>
@@ -42,22 +44,26 @@
                 <li>Procedurally generate dungeon submaps</li>
                 <li>Be able to display maps using different classification layers.</li>
             </ol>
-
+        </p>
+        <p>    
             Below is the set of user stories we created for each sprint:
-            <br/><br/>
+        </p>
+        <p>
             <b>Sprint 1</b>
             <ul>
                 <li>As a GM I would like to be able to generate a world map.</li>
                 <li>As a user I’d like to be able to interact with the application without learning unix.</li>
             </ul>
-
+        </p>
+        <p>    
             <b>Sprint 2</b>
             <ul>
                 <li>As a GM I would like to be able to generate a fine scale map.</li>
                 <li>As a GM I would like to be able to zoom in to greater levels of detail.</li>
                 <li>As a GM I would like to be able to save the map in other formats.</li>
             </ul>
-
+        </p>
+        <p>
             <b>Sprint 3</b>
             <ul>
                 <li>As a GM I would like to add my own content to the content database.</li>
@@ -67,7 +73,8 @@
                 <li>As a GM I would like to be able to set waypoints of particular areas and be able to return to them with ease.</li>
                 <li>As a GM I would like waypoints for my players.</li>
             </ul>
-
+        </p>
+        <p>
             <b>Sprint 4</b>
             <ul>
                 <li>As a GM I would like to be able to see political, topographical, biome-based, and economic map types.</li>
@@ -75,14 +82,14 @@
         </p>
 
         <h2 align="center">Wireframes</h2>
-        <img src="Wireframes/WorldBuilder/Page1.jpg" width="1000" class="center"/>
+        <div class="center"><img src="Wireframes/WorldBuilder/Page1.jpg" width="1000"/></div>
         <h2 align="center">High Fidelity Prototype</h2>
-        <img src="Prototypes/WorldBuilder/Landing.png" width="1000" class="center"/>
+        <div class="center"><img src="Prototypes/WorldBuilder/Landing.png" width="1000"/>
         <br/>
-        <img src="Prototypes/WorldBuilder/Export.png" width="333" class="center"/><img src="Prototypes/WorldBuilder/Login.png" width="333" class="center"/><img src="Prototypes/WorldBuilder/Register.png" width="333" class="center"/>
+        <img src="Prototypes/WorldBuilder/Export.png" width="330"/><img src="Prototypes/WorldBuilder/Login.png" width="330"/><img src="Prototypes/WorldBuilder/Register.png" width="330"/>
         <br/>
-        <img src="Prototypes/WorldBuilder/Edit.png" width="500" class="center"/><img src="Prototypes/WorldBuilder/Regenerate.png" width="500" class="center"/>
-        <h2 align="center">Figma Link</h2>
-        <h2 align="center">Github Repository</h2>
+        <img src="Prototypes/WorldBuilder/Edit.png" width="500"/><img src="Prototypes/WorldBuilder/Regenerate.png" width="500"/></div>
+        <h2 align="center"><a href="https://www.figma.com/file/Z3OcS4AiDFIMclltBCPu3A/WorldBuilder?node-id=0%3A1">Figma Link</a></h2>
+        <h2 align="center"><a href="https://github.com/jwynd/WorldBuilder">Github Repository</a></h2>
     </body>
 </html>
