--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
         <meta charset="utf-8">
         <title>About</title>
     </head>
@@ -13,11 +14,14 @@
                 <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
-        <h1>About</h1>
-        <p>
-            Hi, I’m Elizabeth and I’m a fourth-year UCSC student double majoring in computer science and cognitive science. I’m currently a Tech4Good lab member working on qualitative research and UX design for micro-learning platform, Collectively. My interests lie within the intersection of technology, design, and usability. These interests drive me to apply my skills and knowledge for improving already-existing products and designing easy-to-use, intuitive interfaces for others.
-        </p>
-        <img src="portrait.jpg" width="500"/>
+        <br/>
+        <div style="text-indent: 4em; line-height: 0.5em"><h1>About</h1></div>
+        <div class="bio">
+            <p>
+                Hi, I’m Elizabeth and I’m a fourth-year UCSC student double majoring in computer science and cognitive science. I’m currently a Tech4Good lab member working on qualitative research and UX design for micro-learning platform, Collectively. My interests lie within the intersection of technology, design, and usability. These interests drive me to apply my skills and knowledge for improving already-existing products and designing easy-to-use, intuitive interfaces for others.
+            </p>
+        </div>
+        <div class="portrait"><img src="portrait.jpg" width="400"/></div>
         <div class="icons"><img src="Icons/github.svg"/><img src="Icons/linkedin.svg"><img src="Icons/mail.svg"/></div>
     </body>
 </html>
