changed css and added footer

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Raleway|Roboto&display=swap" rel="stylesheet"> 
         <meta charset="utf-8">
         <title>About</title>
     </head>
@@ -10,18 +10,19 @@
         <div class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <div classname="current-page"><li>About</li></div>
+                <b><li>About</li></b>
                 <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
-        <br/>
-        <div style="text-indent: 4em; line-height: 0.5em"><h1>About</h1></div>
+        <br/><br/>
+        <div class="title"><h1>About</h1></div>
         <div class="bio">
-            <p>
                 Hi, I’m Elizabeth and I’m a fourth-year UCSC student double majoring in computer science and cognitive science. I’m currently a Tech4Good lab member working on qualitative research and UX design for micro-learning platform, Collectively. My interests lie within the intersection of technology, design, and usability. These interests drive me to apply my skills and knowledge for improving already-existing products and designing easy-to-use, intuitive interfaces for others.
-            </p>
         </div>
         <div class="portrait"><img src="portrait.jpg" width="400"/></div>
         <div class="icons"><img src="Icons/github.svg"/><img src="Icons/linkedin.svg"><img src="Icons/mail.svg"/></div>
     </body>
+    <footer>
+        © 2020 Elizabeth DInh
+    </footer>
 </html>
