--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Raleway|Roboto&display=swap" rel="stylesheet"> 
         <meta charset="utf-8">
         <title>Elizabeth Dinh</title>
     </head>
     <body>
         <div class="navbar">
             <ul>
-                <div classname="current-page"><li>Home</li></div>
+                <b><li>Home</li></b>
                 <li><a href="about.html">About</a></li>
                 <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
         <br/><br/>
-        <div style="text-indent: 4em; line-height: 0.5em"><h1>Elizabeth Dinh</h1></div>
-        <div style="text-indent: 4em;">
+        <div class="title"><h1>Elizabeth Dinh</h1></div>
+        <div style="font-size: 14pt; padding: 0em 10em 0em 8.5em; ">
         I strive to design intuitive and accessible products that make day-to-day living easier. I'm currently looking for full-time employment in UX design or research. Below are some of the projects that I've been working on.
         </div>
         <a href="ugr.html">UCSC Undergraduate Research Opportunities</a>
@@ -27,4 +27,7 @@
         <br/>
         <a href="worldbuilder.html">WorldBuilder</a>
     </body>
+    <footer>
+        © 2020 Elizabeth DInh
+    </footer>
 </html>
