--- a/creditkarma.html
+++ b/creditkarma.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Raleway|Roboto&display=swap" rel="stylesheet"> 
         <meta charset="utf-8">
         <title>Credit Karma Redesign</title>
     </head>
@@ -116,4 +116,7 @@
         <br/>
         <div style="text-align:center;"><a href="https://www.figma.com/file/5fOKyOtRvbuAlMoAUSet5R/Credit-Karma-Redesign?node-id=0%3A1"><i>View the high fidelity prototype in Figma</i></a></div>
     </body>
+    <div class="content-footer">
+        © 2020 Elizabeth DInh
+    </div>
 </html>
