--- a/worldbuilder.html
+++ b/worldbuilder.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Raleway|Roboto&display=swap" rel="stylesheet"> 
         <meta charset="utf-8">
         <title>WorldBuilder</title>
     </head>
