--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                 Hi, I’m Elizabeth and I’m a fourth-year UCSC student double majoring in computer science and cognitive science. I’m currently a Tech4Good lab member working on qualitative research and UX design for micro-learning platform, Collectively. My interests lie within the intersection of technology, design, and usability. These interests drive me to apply my skills and knowledge for improving already-existing products and designing easy-to-use, intuitive interfaces for others.
         </div>
         <div class="portrait"><img src="portrait.jpg" width="400"/></div>
-        <div class="icons"><img src="Icons/github.svg"/><img src="Icons/linkedin.svg"><img src="Icons/mail.svg"/></div>
+        <div class="icons"><a href="https://github.com/elizabethdinh/"><img src="Icons/github.svg" width="50"/></a><a href="https://www.linkedin.com/in/elizabethtdinh"><img src="Icons/linkedin.svg" width="50"></a> <a href="mailto:etdinh@ucsc.edu"><img src="Icons/mail.svg" width="50"/></a></div>
     </body>
     <footer>
         © 2020 Elizabeth DInh
