--- a/about.html
+++ b/about.html
@@ -23,6 +23,6 @@
         <div class="icons"><a href="https://github.com/elizabethdinh/"><img src="Icons/github.svg" width="50"/></a><a href="https://www.linkedin.com/in/elizabethtdinh"><img src="Icons/linkedin.svg" width="50"></a> <a href="mailto:etdinh@ucsc.edu"><img src="Icons/mail.svg" width="50"/></a></div>
     </body>
     <footer>
-        © 2020 Elizabeth DInh
+        © 2020 Elizabeth Dinh
     </footer>
 </html>
