--- a/creditkarma.html
+++ b/creditkarma.html
@@ -117,6 +117,6 @@
         <div style="text-align:center;"><a href="https://www.figma.com/file/5fOKyOtRvbuAlMoAUSet5R/Credit-Karma-Redesign?node-id=0%3A1"><i>View the high fidelity prototype in Figma</i></a></div>
     </body>
     <div class="content-footer">
-        © 2020 Elizabeth DInh
+        © 2020 Elizabeth Dinh
     </div>
 </html>
