--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         <a href="worldbuilder.html">WorldBuilder</a>
     </body>
     <footer>
-        © 2020 Elizabeth DInh
+        © 2020 Elizabeth Dinh
     </footer>
 </html>
