--- a/t4g.html
+++ b/t4g.html
@@ -20,4 +20,7 @@
             Coming soon!
         </p>
     </body>
+    <div class="content-footer">
+        © 2020 Elizabeth Dinh
+    </div>
 </html>
