--- a/worldbuilder.html
+++ b/worldbuilder.html
@@ -92,4 +92,7 @@
         <h2 align="center"><a href="https://www.figma.com/file/Z3OcS4AiDFIMclltBCPu3A/WorldBuilder?node-id=0%3A1">Figma Link</a></h2>
         <h2 align="center"><a href="https://github.com/jwynd/WorldBuilder">Github Repository</a></h2>
     </body>
+    <div class="content-footer">
+        © 2020 Elizabeth Dinh
+    </div>
 </html>
