finished up css

--- a/creditkarma.html
+++ b/creditkarma.html
@@ -3,10 +3,12 @@
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Raleway|Roboto&display=swap" rel="stylesheet"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta charset="utf-8">
         <title>Credit Karma Redesign</title>
     </head>
     <body>
+        <br/>
         <div class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -14,7 +16,6 @@
                 <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
-        <br/><br/>
         <div align="center"><h1>Credit Karma Redesign</h1></div>
         <h2 align="center">Introduction</h2>
         <p>
@@ -26,8 +27,8 @@
 
         <h2 align="center">Experienced User Interviews</h2>
         <p>
-            Two experienced Credit Karma users were interviewed and asked to perform the main tasks of the desktop application in order to evaluate the Credit Karma interface. Participant A is a female, 32-year-old psychology major at the University of California, Santa Cruz. She uses Credit Karma and other credit monitoring applications–such as Capital One and Citibank–once or twice a month. Participant B is a female, 21-year-old cognitive science major at the University of California, Santa Cruz. She uses Credit Karma once a month and no other credit monitoring applications. Participants A and B both stated that they Credit Karma to check full credit reports, dispute errors on credit reports, file tax returns, and look for new credit cards to apply for. The interviews were voice-recorded, video-recorded, and semi-structured. The interviewees were generally asked the following questions:
-            <ol>
+            Two experienced Credit Karma users were interviewed and asked to perform the main tasks of the desktop application in order to evaluate the Credit Karma interface. Participants A and B both stated that they Credit Karma to check full credit reports, dispute errors on credit reports, file tax returns, and look for new credit cards to apply for. The interviews were voice-recorded, video-recorded, and semi-structured. The interviewees were generally asked the following questions:
+            <ol class="content-list">
                 <li>What do you use Credit Karma for?</li>
                 <li>How often do you use this app?</li>
                 <li>What do you think of this app?</li>
@@ -37,7 +38,7 @@
         </p>
         <p>
             Based on the responses from these interviews, it appears that experienced users find Credit Karma’s user interface to be well-designed, intuitive, and useful. However a common complaint amongst these users was that with the credit card simulator was difficult to find. The users have indicated to me that the three main tasks for using Credit Karma are:
-            <ol>
+            <ol class="content-list">
                 <li>Checking Equifax and Transunion scores and other details in a credit report</li>
                 <li>Finding new credit cards to apply for</li>
                 <li>Filing tax returns</li>
@@ -47,7 +48,7 @@
         <h2 align="center">User Task Evaluations</h2>
         <p>
             I have conducted usability testing with five naive users who have never used Credit Karma before. The task evaluation interviews were semi-structured, in-person, and voice-recorded. The naive users were asked to perform the following tasks:
-            <ol>
+            <ol class="content-list">
                 <li>Register for Credit Karma</li>
                 <li>Check your credit score. Look for credit card accounts and credit inquiries.</li>
                 <li>Find the credit card simulator. See what would happen if you were to add a new credit card with a credit limit of $5000. See what would happen if you were to miss one payment by one month.</li>
@@ -55,7 +56,7 @@
         </p>
         <p>
             After completing the series of tasks, the interviewees were then asked the following questions:
-            <ol>
+            <ol class="content-list">
                 <li>To begin, please tell me a little about yourself.</li>
                 <li>Have you ever used Credit Karma before?</li>
                 <li>Have you used any systems similar to Credit Karma?
@@ -69,9 +70,6 @@
                 <li>What do you like or dislike about this app?</li>
                 <li>What was easy or difficult about task 1? Repeat for tasks 2 and 3.</li>
             </ol>
-        </p>
-        <p>
-            The novice users attend the University of California, Santa Cruz and have never used a credit monitoring application, unless stated otherwise. Participant C is a female, 21-year-old cognitive science and biology double major. Participant D is a female, 21-year-old psychology major and education minor. Participant E is a gender-fluid, 21-year-old psychology major. Participant F is a male, 21-year-old aviation business administration and air traffic management double major at Embry Riddle Aeronautical University in Prescott, Arizona; he uses CreditWise from Capital One to monitor his credit score once a month. Participant G is a male, 21-year-old computer engineering major at California Polytechnic State University, Pomona.
         </p>
         <p>
             Throughout the user task evaluations, every novice user interviewed has expressed that the user interface for Credit Karma is visually appealing. However most of them complained that the interface is too complicated and is overwhelming to those with little to no knowledge on financial matters due to its plethora of features. Another common complaint was that it was obvious that Credit Karma is trying to promote credit cards in order to gain money and the constant advertising was distracting.
@@ -96,25 +94,26 @@
             The credit score simulator feature needs to be improved in terms of visibility, especially when many people have a desire to use this feature. It is hidden in an illogical menu structure; the user needs to hover over Resources and search through a large number of features to find the simulator. A better way to advertise this simulator is to either create a large icon for it in the dashboard or place it on the same page as the user’s full credit report.
         </p>
         <h2 align="center">Wireframes</h2>
-        <div class="center"><img src="Wireframes/CreditKarma/Page1.jpg" width="500"/><img src="Wireframes/CreditKarma/Page2.jpg" width="500"/></div>
+        <div class="center"><img src="Wireframes/CreditKarma/Page1.jpg" width="37.5%"/><img src="Wireframes/CreditKarma/Page2.jpg" width="37.5%"/></div>
         <h2 align="center">High Fidelity Mockup</h2>
-        <div class="center"><img src="Prototypes/CreditKarma/Dashboard.png" width="1000"/></div>
+        <div class="center"><img src="Prototypes/CreditKarma/Dashboard.png" width="75%"/></div>
         <br/>
         <div style="text-align:center;"><i>Dashboard</i></div>
         <br/>
-        <div class="center"><img src="Prototypes/CreditKarma/Tutorial.png" width="1000"/></div>
+        <div class="center"><img src="Prototypes/CreditKarma/Tutorial.png" width="75%"/></div>
         <br/>
         <div style="text-align:center;"><i>Dashboard - Tutorial</i></div>
         <br/>
-        <div class="center"><img src="Prototypes/CreditKarma/Calculators.png" width="1000"/></div>
+        <div class="center"><img src="Prototypes/CreditKarma/Calculators.png" width="75%"/></div>
         <br/>
         <div style="text-align:center;"><i>Calculators</i></div>
         <br/>
-        <div class="center"><img src="Prototypes/CreditKarma/IdentityVerification.png" width="1000"/></div>
+        <div class="center"><img src="Prototypes/CreditKarma/IdentityVerification.png" width="75%"/></div>
         <br/>
         <div style="text-align:center;"><i>Registration - Identity Verification</i></div>
         <br/>
-        <div style="text-align:center;"><a href="https://www.figma.com/file/5fOKyOtRvbuAlMoAUSet5R/Credit-Karma-Redesign?node-id=0%3A1"><i>View the high fidelity prototype in Figma</i></a></div>
+        <a class="button-link" href="https://www.figma.com/file/5fOKyOtRvbuAlMoAUSet5R/Credit-Karma-Redesign?node-id=0%3A1"><div align="center"><div class="redirect-button">View the high fidelity prototype in Figma</div></div></a>
+        <br/>
     </body>
     <div class="content-footer">
         © 2020 Elizabeth Dinh
