--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Raleway|Roboto&display=swap" rel="stylesheet"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta charset="utf-8">
         <title>Elizabeth Dinh</title>
     </head>
     <body>
+        <br/>
         <div class="navbar">
             <ul>
                 <b><li>Home</li></b>
@@ -14,20 +16,53 @@
                 <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
-        <br/><br/>
         <div class="title"><h1>Elizabeth Dinh</h1></div>
-        <div style="font-size: 14pt; padding: 0em 10em 0em 8.5em; ">
+        <div style="font-size: 12pt; margin-left: auto; margin-right: auto; width: 75%; color: #19323C;">
         I strive to design intuitive and accessible products that make day-to-day living easier. I'm currently looking for full-time employment in UX design or research. Below are some of the projects that I've been working on.
         </div>
-        <a href="ugr.html">UCSC Undergraduate Research Opportunities</a>
-        <br/>
-        <a href="t4g.html">Tech4Good</a>
-        <br/>
-        <a href="creditkarma.html">Credit Karma Redesign</a>
-        <br/>
-        <a href="worldbuilder.html">WorldBuilder</a>
+        <div class="projects">
+            <ul>
+                <li>
+                    <div class="project-title"><b>UCSC Undergraduate Research Opportunities</b></div>
+                    <br/>
+                    <img class="project-icon" src="Icons\ucsc.png" height="150"/>
+                    <div class="project-description">Redesigned the UCSC undergraduate research opportunities website to make improvements to the user experience.</div>
+                    <br/>
+                    <a class="project-link" href="ugr.html"><div class="see-more">See more</div></a>
+                </li>
+                <br/>
+                <li>
+                    <div class="project-title"><b>Tech4Good</b></div>
+                    <br/>
+                    <img class="project-icon" src="Icons\t4g.png" height="175"/>
+                    <div class="project-description">Designed high fidelity prototypes and conducted qualitative research for needfinding and evaluation of microlearning platform, Collectively.</div>
+                    <br/>
+                    <a class="project-link" href="t4g.html"><div class="see-more">See more</div></a>
+                </li>
+                <br/>
+                <li>
+                    <div class="project-title"><b>Credit Karma Redesign</b></div>
+                    <br/>
+                    <img class="project-icon" src="Icons\ck.png" width="200" style="margin-top: -20px;"/>
+                    <div class="project-description">Ran usability studies to analyze quantitative and qualitative data to improve Credit Karma UI.</div>
+                    <br/>
+                    <a class="project-link" href="creditkarma.html"><div class="see-more">See more</div></a>
+                </li>
+                <br/>
+                <li>
+                    <div class="project-title"><b>WorldBuilder</b></div>
+                    <br/>
+                    <img class="project-icon" src="Icons\worldbuilder.png" height="175"/>
+                    <div class="project-description">Designed and developed a procedural map generator for tabletop RPGs such as Dungeons and Dragons and Pathfinder.</div>
+                    <br/>
+                    <a class="project-link" href="worldbuilder.html"><div class="see-more">See more</div></a>
+                </li>
+                <br/>
+            </ul>
+        </div>
     </body>
-    <footer>
+    <br/>
+    <div class="content-footer">
         © 2020 Elizabeth Dinh
-    </footer>
+    </div>
 </html>
