--- a/worldbuilder.html
+++ b/worldbuilder.html
@@ -3,10 +3,12 @@
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Raleway|Roboto&display=swap" rel="stylesheet"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta charset="utf-8">
         <title>WorldBuilder</title>
     </head>
     <body>
+        <br/>
         <div class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -14,7 +16,6 @@
                 <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
-        <br/><br/>
         <div align="center"><h1>WorldBuilder</h1></div>
         <h2 align="center">Introduction</h2>
         <p>
@@ -25,7 +26,7 @@
         <p>
             Initially being a project for a software engineering class, there wasn't much time to conduct user research. Looking through designs that would appeal to our intended demographics of tabletop RPG players, the top results I found were that they looked for these certain qualities in design:
 
-            <ol>
+            <ol class="content-list">
                 <li>Speed, ease and efficiency</li>
                 <li>Clear, intuitive visuals</li>
                 <li>Minimalism</li>
@@ -36,7 +37,7 @@
         <p>
             To follow Scrum and Agile methodologies, we created user stories and set tasks to accomplish these user stories in every sprint. We wanted WorldBuilder to have the following features:
 
-            <ol>
+            <ol class="content-list">
                 <li>Use procedural generation to generate world maps suitable for tabletop RPG settings</li>
                 <li>Have an intuitive and informative GUI for letting the user view and interact with the map</li>
                 <li>Display variable levels of map detail at different scales</li>
@@ -50,14 +51,14 @@
         </p>
         <p>
             <b>Sprint 1</b>
-            <ul>
+            <ul class="content-list">
                 <li>As a GM I would like to be able to generate a world map.</li>
                 <li>As a user I’d like to be able to interact with the application without learning unix.</li>
             </ul>
         </p>
         <p>    
             <b>Sprint 2</b>
-            <ul>
+            <ul class="content-list">
                 <li>As a GM I would like to be able to generate a fine scale map.</li>
                 <li>As a GM I would like to be able to zoom in to greater levels of detail.</li>
                 <li>As a GM I would like to be able to save the map in other formats.</li>
@@ -65,7 +66,7 @@
         </p>
         <p>
             <b>Sprint 3</b>
-            <ul>
+            <ul class="content-list">
                 <li>As a GM I would like to add my own content to the content database.</li>
                 <li>As a GM I would like to be able to regenerate particular regions.</li>
                 <li>As a GM I would like to be able to produce a version of my map with certain details hidden so that I can provide a map to my players that fits with their incomplete knowledge of the world.</li>
@@ -76,21 +77,24 @@
         </p>
         <p>
             <b>Sprint 4</b>
-            <ul>
+            <ul class="content-list">
                 <li>As a GM I would like to be able to see political, topographical, biome-based, and economic map types.</li>
             </ul>
         </p>
 
         <h2 align="center">Wireframes</h2>
-        <div class="center"><img src="Wireframes/WorldBuilder/Page1.jpg" width="1000"/></div>
+        <div class="center"><img src="Wireframes/WorldBuilder/Page1.jpg" width="75%"/></div>
         <h2 align="center">High Fidelity Prototype</h2>
-        <div class="center"><img src="Prototypes/WorldBuilder/Landing.png" width="1000"/>
+        <div class="center"><img src="Prototypes/WorldBuilder/Landing.png" width="75%"/>
         <br/>
-        <img src="Prototypes/WorldBuilder/Export.png" width="330"/><img src="Prototypes/WorldBuilder/Login.png" width="330"/><img src="Prototypes/WorldBuilder/Register.png" width="330"/>
+        <img src="Prototypes/WorldBuilder/Export.png" width="25%"/><img src="Prototypes/WorldBuilder/Login.png" width="25%"/><img src="Prototypes/WorldBuilder/Register.png" width="25%"/>
         <br/>
-        <img src="Prototypes/WorldBuilder/Edit.png" width="500"/><img src="Prototypes/WorldBuilder/Regenerate.png" width="500"/></div>
-        <h2 align="center"><a href="https://www.figma.com/file/Z3OcS4AiDFIMclltBCPu3A/WorldBuilder?node-id=0%3A1">Figma Link</a></h2>
-        <h2 align="center"><a href="https://github.com/jwynd/WorldBuilder">Github Repository</a></h2>
+        <img src="Prototypes/WorldBuilder/Edit.png" width="37.5%"/><img src="Prototypes/WorldBuilder/Regenerate.png" width="37.5%"/></div>
+        <br/>
+        <a class="button-link" href="https://www.figma.com/file/Z3OcS4AiDFIMclltBCPu3A/WorldBuilder?node-id=0%3A1"><div align="center"><div class="redirect-button">Figma Link</div></div></a>
+        <br/>
+        <a class="button-link" href="https://github.com/jwynd/WorldBuilder"><div align="center"><div class="redirect-button">GitHub Repository</div></div></a>
+        <br/>
     </body>
     <div class="content-footer">
         © 2020 Elizabeth Dinh
