--- a/about.html
+++ b/about.html
@@ -3,10 +3,12 @@
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Raleway|Roboto&display=swap" rel="stylesheet"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta charset="utf-8">
         <title>About</title>
     </head>
     <body>
+        <br/>
         <div class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -14,13 +16,17 @@
                 <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
-        <br/><br/>
-        <div class="title"><h1>About</h1></div>
-        <div class="bio">
-                Hi, I’m Elizabeth and I’m a fourth-year UCSC student double majoring in computer science and cognitive science. I’m currently a Tech4Good lab member working on qualitative research and UX design for micro-learning platform, Collectively. My interests lie within the intersection of technology, design, and usability. These interests drive me to apply my skills and knowledge for improving already-existing products and designing easy-to-use, intuitive interfaces for others.
+        <div class="title" style="float: left;"><h1>About</h1></div>
+        <div class="icons">
+            <ul>
+                <li><a href="https://github.com/elizabethdinh/"><img src="Icons/github.svg" width="40"/></a></li>
+                <li><a href="https://www.linkedin.com/in/elizabethdinh"><img src="Icons/linkedin.svg" width="40"></a></li>
+                <li><a href="mailto:etdinh@ucsc.edu"><img src="Icons/mail.svg" width="40"/></a></li>
+            </ul>
         </div>
-        <div class="portrait"><img src="portrait.jpg" width="400"/></div>
-        <div class="icons"><a href="https://github.com/elizabethdinh/"><img src="Icons/github.svg" width="50"/></a><a href="https://www.linkedin.com/in/elizabethtdinh"><img src="Icons/linkedin.svg" width="50"></a> <a href="mailto:etdinh@ucsc.edu"><img src="Icons/mail.svg" width="50"/></a></div>
+        <p>
+                Hi, I’m Elizabeth and I’m a fourth-year UCSC student double majoring in computer science and cognitive science. I’m currently a Tech4Good lab member working on qualitative research and UX design for micro-learning platform, Collectively. My interests lie within the intersection of technology, design, and usability. These interests drive me to apply my skills and knowledge for improving already-existing products and designing easy-to-use, intuitive interfaces for others.
+        </p>
     </body>
     <footer>
         © 2020 Elizabeth Dinh
