--- a/t4g.html
+++ b/t4g.html
@@ -3,10 +3,12 @@
     <head>
         <link rel="stylesheet" type="text/css" href="site.css">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Raleway|Roboto&display=swap" rel="stylesheet"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta charset="utf-8">
         <title>Tech4Good</title>
     </head>
     <body>
+        <br/>
         <div class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -14,11 +16,11 @@
                 <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
-        <br/><br/>
         <div align="center"><h1>Tech4Good</h1></div>
         <p>
             Coming soon!
         </p>
+        <br/>
     </body>
     <div class="content-footer">
         © 2020 Elizabeth Dinh
