fixed icons and changed about page

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <title>About</title>
     </head>
-    <body>
+    <body style="overflow-y: scroll;">
         <br/>
         <div class="navbar">
             <ul>
@@ -16,16 +16,11 @@
                 <li><a href="ElizabethDinh_Resume.pdf">Resume</a></li>
             </ul> 
         </div>
-        <div class="title" style="float: left;"><h1>About</h1></div>
-        <div class="icons">
-            <ul>
-                <li><a href="https://github.com/elizabethdinh/"><img src="Icons/github.svg" width="40"/></a></li>
-                <li><a href="https://www.linkedin.com/in/elizabethdinh"><img src="Icons/linkedin.svg" width="40"></a></li>
-                <li><a href="mailto:etdinh@ucsc.edu"><img src="Icons/mail.svg" width="40"/></a></li>
-            </ul>
-        </div>
+        <div class="title"><h1>About</h1></div>
         <p>
                 Hi, I’m Elizabeth and I’m a fourth-year UCSC student double majoring in computer science and cognitive science. I’m currently a Tech4Good lab member working on qualitative research and UX design for micro-learning platform, Collectively. My interests lie within the intersection of technology, design, and usability. These interests drive me to apply my skills and knowledge for improving already-existing products and designing easy-to-use, intuitive interfaces for others.
+                <br/><br/>
+                Find me on <a href="https://github.com/elizabethdinh/" style="color: #F2545B;">GitHub</a> or <a href="https://www.linkedin.com/in/elizabethdinh" style="color: #F2545B;">LinkedIn</a>. Also feel free to <a href="mailto:etdinh@ucsc.edu" style="color: #F2545B;">email me</a>!
         </p>
     </body>
     <footer>
