--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul> 
         </div>
         <div class="title"><h1>Elizabeth Dinh</h1></div>
-        <div style="font-size: 12pt; margin-left: auto; margin-right: auto; width: 75%; color: #19323C;">
+        <div style="font-size: 12pt; font-weight: 200; margin-left: auto; margin-right: auto; width: 75%; color: #19323C;">
         I strive to design intuitive and accessible products that make day-to-day living easier. I'm currently looking for full-time employment in UX design or research. Below are some of the projects that I've been working on.
         </div>
         <div class="projects">
@@ -34,7 +34,7 @@
                 <li>
                     <div class="project-title"><b>Tech4Good</b></div>
                     <br/>
-                    <img class="project-icon" src="Icons\t4g.png" height="175"/>
+                    <img class="project-icon" src="Icons\t4g.png" height="150"/>
                     <div class="project-description">Designed high fidelity prototypes and conducted qualitative research for needfinding and evaluation of microlearning platform, Collectively.</div>
                     <br/>
                     <a class="project-link" href="t4g.html"><div class="see-more">See more</div></a>
@@ -52,7 +52,7 @@
                 <li>
                     <div class="project-title"><b>WorldBuilder</b></div>
                     <br/>
-                    <img class="project-icon" src="Icons\worldbuilder.png" height="175"/>
+                    <img class="project-icon" src="Icons\worldbuilder.png" height="150"/>
                     <div class="project-description">Designed and developed a procedural map generator for tabletop RPGs such as Dungeons and Dragons and Pathfinder.</div>
                     <br/>
                     <a class="project-link" href="worldbuilder.html"><div class="see-more">See more</div></a>
