--- a/t4g.html
+++ b/t4g.html
@@ -18,8 +18,12 @@
         </div>
         <div align="center"><h1>Tech4Good</h1></div>
         <p>
-            Coming soon!
+            I have been working as an undergraduate research assistant and UX designer at UCSC professor David Lee’s Tech4Good lab since September 2019. Tech4Good focuses on studying the intersection of computational systems and social interaction. Working in this lab has been a wonderful experience because it allows me to apply my knowledge of human-computer interaction into projects and gain new skills that I would not acquire from classes.
         </p>
+        <div align="center"><h1>Collectively</h1></div>
+        <div align="center"><h2>Intro</h2></div>
+        <p>While working at Tech4Good, I have been working on needfinding and designs for an educational platform, Collectively. Collectively aims to unite students into reading groups and skill-building groups for them to explore real world applications of computer science.</p>
+
         <br/>
     </body>
     <div class="content-footer">
