--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         </div>
         <div class="title"><h1>About</h1></div>
         <p>
-                Hi, I’m Elizabeth and I’m a fourth-year UCSC student double majoring in computer science and cognitive science. I’m currently a Tech4Good lab member working on qualitative research and UX design for micro-learning platform, Collectively. My interests lie within the intersection of technology, design, and usability. These interests drive me to apply my skills and knowledge for improving already-existing products and designing easy-to-use, intuitive interfaces for others.
+                Hi, I'm Elizabeth and I am a student at University of California, Santa Cruz. I am expecting to graduate in June 2020 with a B.A. in computer science and a B.S. in cognitive science. I’m currently a Tech4Good lab member working on qualitative research and UX design for micro-learning platform, Collectively. My interests lie within the intersection of technology, design, and usability. These interests drive me to apply my skills and knowledge for improving already-existing products and designing easy-to-use, intuitive interfaces for others.
                 <br/><br/>
                 Find me on <a href="https://github.com/elizabethdinh/" style="color: #F2545B;">GitHub</a> or <a href="https://www.linkedin.com/in/elizabethdinh" style="color: #F2545B;">LinkedIn</a>. Also feel free to <a href="mailto:etdinh@ucsc.edu" style="color: #F2545B;">email me</a>!
         </p>
