finished tech4good page

--- a/creditkarma.html
+++ b/creditkarma.html
@@ -95,7 +95,7 @@
         </p>
         <h2 align="center">Wireframes</h2>
         <div class="center"><img src="Wireframes/CreditKarma/Page1.jpg" width="37.5%"/><img src="Wireframes/CreditKarma/Page2.jpg" width="37.5%"/></div>
-        <h2 align="center">High Fidelity Mockup</h2>
+        <h2 align="center">High Fidelity Prototypes</h2>
         <div class="center"><img src="Prototypes/CreditKarma/Dashboard.png" width="75%"/></div>
         <br/>
         <div style="text-align:center;"><i>Dashboard</i></div>
