--- a/t4g.html
+++ b/t4g.html
@@ -22,8 +22,69 @@
         </p>
         <div align="center"><h1>Collectively</h1></div>
         <div align="center"><h2>Intro</h2></div>
-        <p>While working at Tech4Good, I have been working on needfinding and designs for an educational platform, Collectively. Collectively aims to unite students into reading groups and skill-building groups for them to explore real world applications of computer science.</p>
+        <p>
+            While working at Tech4Good, I have been working on needfinding and designs for an educational platform, Collectively. Collectively aims to unite students into reading groups and skill-building groups for them to explore real world applications of computer science.
+        </p>
+        <div align="center"><h2>Faculty Interviews</h2></div>
+        <p>
+            To find what our stakeholders want from Collectively, the Tech4Good Qualitative Analysis team interviewed faculty members and students. We had semi-structured interviews and we typically asked questions such as:
 
+            <ol>
+                <li>Are you working with undergraduates in your lab? If so, how do you feel about them?</li>
+                <li>How do undergraduate research assistants compared to graduate research assistants?</li>
+                <li>What would you share or advise a new faculty who asks you about working with undergraduate student researchers?</li>
+                <li>What are your criteria for undergraduate students interested in your lab?</li>
+                <li>What kind of tasks do you typically assign undergraduate research assistants?</li>
+            </ol>
+        </p>
+        <div align="center"><h2>Faculty Responses</h2></div>
+        <p>
+            Based on the interviews we did with 8 professors, we have deducted that although many professors seek out undergraduate students to help in their labs, they generally do not see undergraduate students as preferable candidates for lab assistants. Because they are already busy with their classes, they tend to have little time to dedicate to research. Thus, professors tend to assign more menial tasks (such as inputting data into Excel spreadsheets) to them, and leave the actual research to graduate research assistants. This negative stance on undergraduate research assistants motivates us to design Collectively not only to unite people who want to learn but also draw in more motivated undergraduate students as potential better-quality lab assistants.
+        </p>
+        <div align="center"><h2>Student Surveys</h2></div>
+        <p>
+            For students, we sent out surveys with the following questions:
+
+            <ol>
+                <li>Demographics (gender, year in college, major, gender, how did you hear about us, etc.)</li>
+                <li>What motivated you to join or return to the reading groups this phase?</li>
+                <li>Is this your first time joining the Collectively reading groups?</li>
+                <li>How important were the following in motivating you to join Collectively?
+                    <ul>
+                        <li>Space to explore new ideas and stretch my imagination</li>
+                        <li>Exposure to topics outside my discipline</li>
+                        <li>Opportunity to meet and get to know like-minded peers</li>
+                        <li>Increase my chances of getting into a research lab</li>
+                        <li>Very low time commitment required</li>
+                    </ul>
+                </li>
+                <li>Do you have any concerns or questions that make you unsure whether to join?</li>
+            </ol>
+        </p>
+        <div align="center"><h2>Student Responses</h2></div>
+        <p>
+            We had a sample size of 48 students. The majors of students interested in Collectively included computer science, computer engineering, game design, electrical engineering, cognitive science, and technology and information management. Most of the students were undergraduates, but there were a few pursuing masters and PhDs. Regardless of whether they were pursuing an undergraduate or graduate degree, students stated that their primary reasons for joining Collectively was to learn more about various topics in computer science and/or gaining experience to join labs. All students claimed that it was extremely important for them that Collectively provided the following:
+            <ul style="padding-left: 5%; width: 75%;">
+                <li>a space to explore new ideas</li>
+                <li>exposure to topics outside their discipline</li>
+                <li>opportunities to meet like-minded people</li>
+                <li>a chance to join a research lab</li>
+                <li>a low time commitment</li>
+            </ul>
+        </p>
+        <div align="center"><h2>Wireframes</h2></div>
+        <p>
+            I worked on the wireframes for the group formation portion of the platform, whereas Dustin sketched the wireframe for the rest of the platform's features.
+        </p>
+        <div class="center"><img src="Wireframes/Collectively/Page1.jpg" width="37.5%"/><img src="Wireframes/Collectively/Page2.jpg" width="37.5%"/></div>
+        <div class="center"><img src="Wireframes/Collectively/DustinWireframe.jpg" width="75%"/></div>
+        <div align="center"><h2>High Fidelity Mockups</h2></div>
+        <p>
+            The entire Tech4Good design team—including me, Dustin, Ivy, and Ana—collaborated to design high fidelity mockups for the Collectively platform, using Figma.
+        </p>
+        <div class="center"><img src="Prototypes/Collectively/Landing V1.jpg" width="37.5%"/><img src="Prototypes/Collectively/create-group.jpg" width="37.5%"/></div>
+        <div class="center"><img src="Prototypes/Collectively/group_ logged in (not joined).jpg" width="37.5%"/><img src="Prototypes/Collectively/group_ not logged in.jpg" width="37.5%"/></div>
+        <div class="center"><img src="Prototypes/Collectively/groups_ not logged in - one expanded header.jpg" width="75%"/></div>
         <br/>
     </body>
     <div class="content-footer">
